Fixed long job title overflowing card
- truncating with ellipsis, since wrapping denormalizes the height of
the card

--- a/src/styles/blocks/summary-head.less
+++ b/src/styles/blocks/summary-head.less
@@ -121,6 +121,7 @@
   }
 
   &__title-block {
+		width: inherit;
     display: inline-block;
     vertical-align: top;
     //margin-left: 10px;
